# CIPHER

./: .gitignore  .init_conda.sh  CPA.ipynb  CPA_VAE_split_results_summary_ReplogleWeissman2022_rpe1.csv  LICENSE  README.md  atlas_analysis.ipynb  environment.yaml  pyproject.toml
benchmarks/: README.md  gears.yaml  parameters.csv  setup_resources.py
benchmarks/conda_envs/: CIPHER.yml  GEARS.yml  linear_mean.yml  scGPT.yml  sclambda.yml  scouter.yml
benchmarks/dataset_splits/FrangiehIzar2021_RNA/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/GSE264667_hepg2_raw_singlecell_01/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/GSE264667_jurkat_raw_singlecell_01/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D1_Rest_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D1_Stim48hr_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D1_Stim8hr_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D2_Stim48hr_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D2_Stim8hr_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D3_Rest_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D3_Stim48hr_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D3_Stim8hr_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D4_Rest_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D4_Stim48hr_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/Marson2025_D4_Stim8hr_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/NormanWeissman2019_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/ReplogleWeissman2022_K562_essential/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/ReplogleWeissman2022_rpe1/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/TianKampmann2019_day7neuron/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/TianKampmann2019_iPSC/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/TianKampmann2021_CRISPRa/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/TianKampmann2021_CRISPRi/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/XAtlas2025_HCT116_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/XAtlas2025_HEK293T_filtered/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/akana_etal_2026_crispra_perturbseq/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/kaden25_fibroblast_ctrl_10k_min100_greedy_4gb/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/kaden25_rpe1_ctrl_10k_min100_greedy_4gb/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/dataset_splits/schemidt_etal_2022_crispra_perturbseq/: control_idx.npy  test_idx.npy  train_idx.npy
benchmarks/gears/: run.py
benchmarks/models/: VENDORED.md
benchmarks/models/GenePert/: GenePertExperiment.py  run_GenePert.py  utils.py
benchmarks/models/scLAMBDA/: README.md
benchmarks/notebooks/: BenchmarkSuppl.ipynb  CPA_VAE_results_summary.csv  CPA_VAE_split_summary_table_ReplogleWeissman2022_rpe1.csv  agg_trace_data.csv  cipher.csv  cpa.csv  gears.csv  n_params.csv
benchmarks/resources/: gene_alias_to_symbol.pkl
benchmarks/run_files/: _bench_common.py  run_CIPHER.py  run_GEARS.py  run_GenePert.py  run_linear_mean.py  run_scGPT.py  run_scLAMBDA.py  run_scouter.py
benchmarks/src/: tracer.py
cipher/: __init__.py  cli.py  core.py  covariance.py  data.py  driver.py  forward.py  inverse.py  io.py  metrics.py  normalize.py  plotting.py  preprocess.py  reverse.py  utils.py
notebooks/: LF_double_pert_R2_and_inference.ipynb  LR_fig2.ipynb  LR_fig3_R2_hist.ipynb  LR_fig3_cross_dataset.ipynb  LR_fig4.ipynb  LR_fig5_TRADE_and_EGENES.ipynb  LR_merfish_S3A.ipynb
resources/: datasets.csv
scripts/: cov.py  r2.py
src/: cov.py  deg.py  preprocess.py  r2.py  run.py  slurm.py  split_data.py
tests/: conftest.py  test_core.py  test_data_detection.py  test_inverse.py  test_pipeline.py
(+11 files in other folders)
