[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cipher-perturb"
version = "0.1.0"
description = "Covariance Inference for Perturbation and High-dimensional Expression Response"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Goyal Lab" }]
keywords = ["perturb-seq", "single-cell", "covariance", "perturbation", "genomics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "anndata>=0.9",
    "scanpy>=1.9",
    "h5py>=3.8",
    "scikit-learn>=1.2",
    "tqdm>=4.64",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
bayes = ["pymc>=5.0"]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/GoyalLab/CIPHER"
Preprint = "https://www.biorxiv.org/content/10.1101/2025.06.27.661814v1"

[project.scripts]
cipher = "cipher.cli:main"

[tool.setuptools]
packages = ["cipher"]

[tool.setuptools.package-data]
cipher = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
