[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cipher-perturb"
dynamic = ["version"]
description = "Covariance Inference for Perturbation and High-dimensional Expression Response"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Yogesh Goyal, Northwestern University", email = "yogesh.goyal@northwestern.edu" }]
keywords = ["perturb-seq", "single-cell", "covariance", "perturbation", "genomics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "anndata>=0.9",
    "h5py>=3.8",
    "tqdm>=4.64",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]           # cipher.plotting helpers
bayes = ["pymc>=5.0"]                 # bayesian_reverse (horseshoe)
dev = ["pytest>=7.0", "matplotlib>=3.6"]

[project.urls]
Homepage = "https://github.com/GoyalLab/CIPHER"
Preprint = "https://www.biorxiv.org/content/10.1101/2025.06.27.661814v1"

[project.scripts]
cipher = "cipher.cli:main"

[tool.setuptools]
packages = ["cipher"]

[tool.setuptools.dynamic]
version = { attr = "cipher.__version__" }

[tool.setuptools.package-data]
cipher = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
